language included - english and german

--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -6,21 +6,21 @@
 #									#
 #####################################
 
-key_file =
-key_openFile =
-key_openDir =
-key_closeTab =
-key_closeAllTabs =
-key_exit =
-key_view =
-key_language =
-key_english =
-key_german =
-key_languageNotification =
-key_help =
-key_about =
-key_welcome =
-key_welcomeHtml =
-key_welcomeOpenFile =
-key_welcomeOpenDir =
-key_err_loadFile = 
+key_file = Datei
+key_openFile = DICOM Datei oeffnen
+key_openDir = Dicom Ordner oeffnen
+key_closeTab = Schliessen
+key_closeAllTabs = Alles Schliessen
+key_exit = Beenden
+key_view = Ansicht
+key_language = Sprache
+key_english = Englisch
+key_german = Deutsch
+key_languageNotification = Alle Aenderungen werden nach einem Neustart von DICOMUX wirksam.
+key_help = Hilfe
+key_about = Ueber
+key_welcome = Willkommen
+key_welcomeHtml = <html><font size=\"+2\">Willkommen zu DICOMUX</font><br/><i>Der freie Betrachter fuer DICOM Dateien.</i><br/><br/></html>
+key_welcomeOpenFile = DICOM Datei oeffnen
+key_welcomeOpenDir = Dicom Ordner oeffnen
+key_err_loadFile = Kann Datei nicht finden: 
