--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -23,4 +23,22 @@ key_welcome = Welcome
 key_welcomeHtml = <html><font size=\"+2\">Welcome to Dicomux</font><br/><i>The free viewer for DICOM files.</i><br/><br/>You may want to do one of the following things:</html>
 key_welcomeOpenFile = Open DICOM File
 key_welcomeOpenDir = Open DICOM Directory
-key_err_loadFile = Couldn't find file: 
+key_err_loadFile = Couldn't find file:
+
+# localization for JFileChooser
+#fileNameLabelText
+#homeFolderToolTipText
+#newFolderToolTipText
+#listViewButtonToolTipTextlist
+#detailsViewButtonToolTipText
+lookInLabelText = Look in
+saveButtonText = Save
+openButtonText = Open
+cancelButtonText = Cancel
+updateButtonText = Update
+helpButtonText = Help
+saveButtonToolTipText = Save
+openButtonToolTipText = Open
+cancelButtonToolTipText = Cancel
+updateButtonToolTipText = Update
+helpButtonToolTipText = Help
