language changing working

--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -24,3 +24,22 @@ key_welcomeHtml = <html><font size=\"+2\">Willkommen zu DICOMUX</font><br/><i>De
 key_welcomeOpenFile = DICOM Datei oeffnen
 key_welcomeOpenDir = Dicom Ordner oeffnen
 key_err_loadFile = Kann Datei nicht finden: 
+
+
+# localization for JFileChooser
+#fileNameLabelText
+#homeFolderToolTipText
+#newFolderToolTipText
+#listViewButtonToolTipTextlist
+#detailsViewButtonToolTipText
+lookInLabelText = Suchen in
+saveButtonText = Speichern
+openButtonText = Oeffnen
+cancelButtonText = Abbrechen
+updateButtonText = Aktualisieren
+helpButtonText = Hilfe
+saveButtonToolTipText = Speichern
+openButtonToolTipText = Oeffnen
+cancelButtonToolTipText = Abbrechen
+updateButtonToolTipText = Aktualisieren
+helpButtonToolTipText = Hilfe
