--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -43,3 +43,7 @@ openButtonToolTipText = Oeffnen
 cancelButtonToolTipText = Abbrechen
 updateButtonToolTipText = Aktualisieren
 helpButtonToolTipText = Hilfe
+
+key_html_openFile = <html><font size=\"+2\">Datei Oeffnen</font><br/><i>Bitte die zu oeffnende DICOM Datei auswaehlen.</i><br/><br/></html>
+key_html_errOpenFile = <html><font size=\"+2\">Fehler</font><br/><i>Dicomux konnte die Datei nicht oeffnen.</i><br/><br/>Wollen Sie eine der folgenden Aktionen durchfuehren:</html>
+
