--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -42,3 +42,6 @@ openButtonToolTipText = Open
 cancelButtonToolTipText = Cancel
 updateButtonToolTipText = Update
 helpButtonToolTipText = Help
+
+key_html_openFile = <html><font size=\"+2\">Open file</font><br/><i>Please select the DICOM file, you want to open.</i><br/><br/></html>
+key_html_errOpenFile = <html><font size=\"+2\">Error</font><br/><i>Dicomux was unable to open the file.</i><br/><br/>You may want to do one of the following things:</html>
