user interface supports specified workflow

--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -7,23 +7,29 @@
 #####################################
 
 key_file = Datei
-key_openFile = DICOM Datei oeffnen
-key_openDir = Dicom Ordner oeffnen
-key_closeTab = Schliessen
-key_closeAllTabs = Alles Schliessen
-key_exit = Beenden
+key_openFile = DICOM Datei öffnen
+key_openDir = DICOM Verzeichnis öffnen
+key_closeTab = Schließen
+key_closeAllTabs = Alles Schließen
+key_exit = Dicomux Beenden
 key_view = Ansicht
 key_language = Sprache
 key_english = Englisch
 key_german = Deutsch
-key_languageNotification = Alle Aenderungen werden nach einem Neustart von DICOMUX wirksam.
+key_languageNotification = Alle Änderungen werden nach einem Neustart von DICOMUX wirksam.
 key_help = Hilfe
-key_about = Ueber
+key_about = Über
 key_welcome = Willkommen
-key_welcomeHtml = <html><font size=\"+2\">Willkommen zu DICOMUX</font><br/><i>Der freie Betrachter fuer DICOM Dateien.</i><br/><br/></html>
-key_welcomeOpenFile = DICOM Datei oeffnen
-key_welcomeOpenDir = Dicom Ordner oeffnen
-key_err_loadFile = Kann Datei nicht finden: 
+key_open = Öffnen
+key_about = Über
+key_error = Fehler
+key_html_welcome = <html><font size=\"+2\">Willkommen zu DICOMUX</font><br/><i>Der freie Betrachter für DICOM Dateien.</i><br/><br/>Sie möchten bestimmt eine der folgenden Dinge tun.</html>
+key_html_openFile = <html><font size=\"+2\">Datei öffnen</font><br/><i>Bitte die zu öffnende DICOM Datei auswählen.</i><br/><br/></html>
+key_html_openDir = <html><font size=\"+2\">Verzeichnis öffnen</font><br/><i>Bitte das zu öffnende DICOM Verzeichnis auswählen.</i><br/><br/></html>
+key_html_errOpenFile = <html><font size=\"+2\">Fehler</font><br/><i>Entschuldigung, aber Dicomux konnte die Datei oder das Verzeichnis nicht öffnen.</i><br/><br/>Sie möchten bestimmt eine der folgenden Dinge tun.</html>
+key_html_about = <html><font size=\"+2\">Über</font><br/><i>Was? Wer? Warum? </i><br/><br/><p>Informationen über Dicomux wurden noch nicht eingefügt.</p><p>Lizenz: GPLv3</p></html>
+
+key_err_loadFile = Konnte die Datei nicht finden: 
 
 
 # localization for JFileChooser
@@ -34,16 +40,12 @@ key_err_loadFile = Kann Datei nicht finden:
 #detailsViewButtonToolTipText
 lookInLabelText = Suchen in
 saveButtonText = Speichern
-openButtonText = Oeffnen
+openButtonText = Öffnen
 cancelButtonText = Abbrechen
 updateButtonText = Aktualisieren
 helpButtonText = Hilfe
 saveButtonToolTipText = Speichern
-openButtonToolTipText = Oeffnen
+openButtonToolTipText = Öffnen
 cancelButtonToolTipText = Abbrechen
 updateButtonToolTipText = Aktualisieren
 helpButtonToolTipText = Hilfe
-
-key_html_openFile = <html><font size=\"+2\">Datei Oeffnen</font><br/><i>Bitte die zu oeffnende DICOM Datei auswaehlen.</i><br/><br/></html>
-key_html_errOpenFile = <html><font size=\"+2\">Fehler</font><br/><i>Dicomux konnte die Datei nicht oeffnen.</i><br/><br/>Wollen Sie eine der folgenden Aktionen durchfuehren:</html>
-
