--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -11,7 +11,7 @@ key_openFile = Open DICOM File
 key_openDir = Open DICOM Directory
 key_closeTab = Close
 key_closeAllTabs = Close All
-key_exit = Exit
+key_exit = Exit Dicomux
 key_view = View
 key_language = Language
 key_english = English
@@ -20,10 +20,15 @@ key_languageNotification = All changes will take effect after a restart of Dicom
 key_help = Help
 key_about = About
 key_welcome = Welcome
-key_welcomeHtml = <html><font size=\"+2\">Welcome to Dicomux</font><br/><i>The free viewer for DICOM files.</i><br/><br/>You may want to do one of the following things:</html>
-key_welcomeOpenFile = Open DICOM File
-key_welcomeOpenDir = Open DICOM Directory
-key_err_loadFile = Couldn't find file:
+key_open = Open
+key_about = About
+key_error = Error
+key_html_welcome = <html><font size=\"+2\">Welcome to Dicomux</font><br/><i>The free viewer for DICOM files.</i><br/><br/>You may want to do one of the following things.</html>
+key_html_openFile = <html><font size=\"+2\">Open file</font><br/><i>Please select the DICOM file, you want to open.</i><br/><br/></html>
+key_html_openDir = <html><font size=\"+2\">Open directory</font><br/><i>Please select the DICOM directory, you want to open.</i><br/><br/></html>
+key_html_errOpenFile = <html><font size=\"+2\">Error</font><br/><i>Sorry, but Dicomux was unable to open the file or directory.</i><br/><br/>You may want to do one of the following things.</html>
+key_html_about = <html><font size=\"+2\">About</font><br/><i>What? Who? Why? </i><br/><br/><p>Dicomux about information not yet implemented</p><p>License: GPLv3</p></html>
+key_err_loadFile = Couldn't open file
 
 # localization for JFileChooser
 #fileNameLabelText
@@ -42,6 +47,3 @@ openButtonToolTipText = Open
 cancelButtonToolTipText = Cancel
 updateButtonToolTipText = Update
 helpButtonToolTipText = Help
-
-key_html_openFile = <html><font size=\"+2\">Open file</font><br/><i>Please select the DICOM file, you want to open.</i><br/><br/></html>
-key_html_errOpenFile = <html><font size=\"+2\">Error</font><br/><i>Dicomux was unable to open the file.</i><br/><br/>You may want to do one of the following things:</html>
