the workspaces got a close button

--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -16,14 +16,14 @@ key_view = Ansicht
 key_language = Sprache
 key_english = Englisch
 key_german = Deutsch
-key_languageNotification = Alle Änderungen werden nach einem Neustart von DICOMUX wirksam.
+key_languageNotification = Alle Änderungen werden nach einem Neustart von Dicomux wirksam.
 key_help = Hilfe
 key_about = Über
 key_welcome = Willkommen
 key_open = Öffnen
 key_about = Über
 key_error = Fehler
-key_html_welcome = <html><font size=\"+2\">Willkommen zu DICOMUX</font><br/><i>Der freie Betrachter für DICOM Dateien.</i><br/><br/>Sie möchten bestimmt eine der folgenden Dinge tun.</html>
+key_html_welcome = <html><font size=\"+2\">Willkommen zu Dicomux</font><br/><i>Der freie Betrachter für DICOM Dateien.</i><br/><br/>Sie möchten bestimmt eine der folgenden Dinge tun.</html>
 key_html_openFile = <html><font size=\"+2\">Datei öffnen</font><br/><i>Bitte die zu öffnende DICOM Datei auswählen.</i><br/><br/></html>
 key_html_openDir = <html><font size=\"+2\">Verzeichnis öffnen</font><br/><i>Bitte das zu öffnende DICOM Verzeichnis auswählen.</i><br/><br/></html>
 key_html_errOpenFile = <html><font size=\"+2\">Fehler</font><br/><i>Entschuldigung, aber Dicomux konnte die Datei oder das Verzeichnis nicht öffnen.</i><br/><br/>Sie möchten bestimmt eine der folgenden Dinge tun.</html>
