restart dialog after language change added

--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -23,7 +23,10 @@ key_welcome = Willkommen
 key_open = Öffnen
 key_about = Über
 key_error = Fehler
+key_continueWork = Arbeit fortsetzen
+key_restart = Dicomux neustarten
 key_html_welcome = <html><font size=\"+2\">Willkommen zu Dicomux</font><br/><i>Der freie Betrachter für DICOM Dateien.</i><br/><br/>Sie möchten bestimmt eine der folgenden Dinge tun.</html>
+key_html_restart = <html><font size=\"+2\">Dicomux neustarten</font><br/><i>Um die Änderungen zu übernehmen, muss Dicomux neu gestartet werden.</i><br/><br/>Alle offenen Dateien werden geschlossen.</html>
 key_html_openFile = <html><font size=\"+2\">Datei öffnen</font><br/><i>Bitte die zu öffnende DICOM Datei auswählen.</i><br/><br/></html>
 key_html_openDir = <html><font size=\"+2\">Verzeichnis öffnen</font><br/><i>Bitte das zu öffnende DICOM Verzeichnis auswählen.</i><br/><br/></html>
 key_html_errOpenFile = <html><font size=\"+2\">Fehler</font><br/><i>Entschuldigung, aber Dicomux konnte die Datei oder das Verzeichnis nicht öffnen.</i><br/><br/>Sie möchten bestimmt eine der folgenden Dinge tun.</html>
