--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -23,7 +23,10 @@ key_welcome = Welcome
 key_open = Open
 key_about = About
 key_error = Error
+key_continueWork = Continue Working
+key_restart = Restart Dicomux
 key_html_welcome = <html><font size=\"+2\">Welcome to Dicomux</font><br/><i>The free viewer for DICOM files.</i><br/><br/>You may want to do one of the following things.</html>
+key_html_restart = <html><font size=\"+2\">Restart Dicomux</font><br/><i>In order to apply your changes, Dicomux has to be restarted.</i><br/><br/>All open files will be closed!</html>
 key_html_openFile = <html><font size=\"+2\">Open file</font><br/><i>Please select the DICOM file, you want to open.</i><br/><br/></html>
 key_html_openDir = <html><font size=\"+2\">Open directory</font><br/><i>Please select the DICOM directory, you want to open.</i><br/><br/></html>
 key_html_errOpenFile = <html><font size=\"+2\">Error</font><br/><i>Sorry, but Dicomux was unable to open the file or directory.</i><br/><br/>You may want to do one of the following things.</html>
