--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -36,19 +36,30 @@ key_err_loadFile = Konnte die Datei nicht finden:
 
 
 # localization for JFileChooser
-#fileNameLabelText
-#homeFolderToolTipText
-#newFolderToolTipText
-#listViewButtonToolTipTextlist
-#detailsViewButtonToolTipText
-lookInLabelText = Suchen in
-saveButtonText = Speichern
-openButtonText = Öffnen
-cancelButtonText = Abbrechen
-updateButtonText = Aktualisieren
-helpButtonText = Hilfe
-saveButtonToolTipText = Speichern
-openButtonToolTipText = Öffnen
-cancelButtonToolTipText = Abbrechen
-updateButtonToolTipText = Aktualisieren
-helpButtonToolTipText = Hilfe
+acceptAllFileFilterText          =Alle Dateien (*.*)
+cancelButtonText                 =Abbrechen
+cancelButtonToolTipText          =File-Chooser-Dialog abbrechen
+detailsViewButtonAccessibleName  =Details
+detailsViewButtonToolTipText     =Details
+directoryDescriptionText         =Ordner
+fileDescriptionText              =Allgemeine Datei
+fileNameLabelText                =Datei Name:
+filesOfTypeLabelText             =Dateitypen:
+helpButtonText                   =Hilfe
+helpButtonToolTipText            =FileChooser Hilfe
+homeFolderAccessibleName         =Home
+homeFolderToolTipText            =Home
+listViewButtonAccessibleName     =Auflisten
+listViewButtonToolTipText        =Auflisten
+lookInLabelText                  =Suchen in:
+newFolderAccessibleName           =Neuer Ordner
+newFolderErrorText               =Fehler beim Erstellen eines neuen Ordners
+newFolderToolTipText             =Neuen Ordner erstellen
+openButtonText                   =Oeffnen
+openButtonToolTipText            =Ausgewaehlte Datei oeffnen
+saveButtonText                   =Speichern
+saveButtonToolTipText            =Ausgewaehlte Datei speichern
+updateButtonText                 =Aktualisieren
+updateButtonToolTipText          =Ordnerauflistung aktualisieren
+upFolderAccessibleName           =Hoch
+upFolderToolTipText              =Eine Ebene hoeher
