--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -34,19 +34,30 @@ key_html_about = <html><font size=\"+2\">About</font><br/><i>What? Who? Why? </i
 key_err_loadFile = Couldn't open file
 
 # localization for JFileChooser
-#fileNameLabelText
-#homeFolderToolTipText
-#newFolderToolTipText
-#listViewButtonToolTipTextlist
-#detailsViewButtonToolTipText
-lookInLabelText = Look in
-saveButtonText = Save
-openButtonText = Open
-cancelButtonText = Cancel
-updateButtonText = Update
-helpButtonText = Help
-saveButtonToolTipText = Save
-openButtonToolTipText = Open
-cancelButtonToolTipText = Cancel
-updateButtonToolTipText = Update
-helpButtonToolTipText = Help
+acceptAllFileFilterText          =All Files (*.*)
+cancelButtonText                 =Cancel
+cancelButtonToolTipText          =Abort file chooser dialog
+detailsViewButtonAccessibleName  =Details
+detailsViewButtonToolTipText     =Details
+directoryDescriptionText         =Directory
+fileDescriptionText              =Generic File
+fileNameLabelText                =File name:
+filesOfTypeLabelText             =Files of type:
+helpButtonText                   =Help
+helpButtonToolTipText            =FileChooser help
+homeFolderAccessibleName         =Home
+homeFolderToolTipText            =Home
+listViewButtonAccessibleName     =List
+listViewButtonToolTipText        =List
+lookInLabelText                  =Look in:
+newFolderAccessibleName           =New Folder
+newFolderErrorText               =Error creating new folder
+newFolderToolTipText             =Create New Folder
+openButtonText                   =Open
+openButtonToolTipText            =Open selected file
+saveButtonText                   =Save
+saveButtonToolTipText            =Save selected file
+updateButtonText                 =Update
+updateButtonToolTipText          =Update directory listing
+upFolderAccessibleName           =Up
+upFolderToolTipText              =Up One Level
