localization of JFileChooser completed

--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -38,13 +38,20 @@ key_err_loadFile = Konnte die Datei nicht finden:
 # localization for JFileChooser
 acceptAllFileFilterText          =Alle Dateien (*.*)
 cancelButtonText                 =Abbrechen
-cancelButtonToolTipText          =File-Chooser-Dialog abbrechen
+cancelButtonToolTipText          =Abbrechen
 detailsViewButtonAccessibleName  =Details
 detailsViewButtonToolTipText     =Details
 directoryDescriptionText         =Ordner
+directoryOpenButtonText          =Öffnen
+directoryOpenButtonToolTipText   =Verzeichnis öffnen
 fileDescriptionText              =Allgemeine Datei
-fileNameLabelText                =Datei Name:
+fileNameLabelText                =Dateiname:
 filesOfTypeLabelText             =Dateitypen:
+fileNameHeaderText               =Name
+fileSizeHeaderText               =Größe
+fileTypeHeaderText               =Typ
+fileDateHeaderText               =Datum
+fileAttrHeaderText               =Attribute
 helpButtonText                   =Hilfe
 helpButtonToolTipText            =FileChooser Hilfe
 homeFolderAccessibleName         =Home
@@ -52,14 +59,18 @@ homeFolderToolTipText            =Home
 listViewButtonAccessibleName     =Auflisten
 listViewButtonToolTipText        =Auflisten
 lookInLabelText                  =Suchen in:
-newFolderAccessibleName           =Neuer Ordner
+newFolderAccessibleName          =Neuer Ordner
 newFolderErrorText               =Fehler beim Erstellen eines neuen Ordners
 newFolderToolTipText             =Neuen Ordner erstellen
-openButtonText                   =Oeffnen
-openButtonToolTipText            =Ausgewaehlte Datei oeffnen
+openButtonText                   =Öffnen
+openButtonToolTipText            =Ausgewählte Datei öffnen
+openDialogTitleText              =
 saveButtonText                   =Speichern
-saveButtonToolTipText            =Ausgewaehlte Datei speichern
+saveButtonToolTipText            =Ausgewählte Datei speichern
+saveDialogTitleText              =
+saveInLabelText                  =Speichern in
 updateButtonText                 =Aktualisieren
 updateButtonToolTipText          =Ordnerauflistung aktualisieren
 upFolderAccessibleName           =Hoch
-upFolderToolTipText              =Eine Ebene hoeher
+upFolderToolTipText              =Eine Ebene höher
+
