--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -36,13 +36,20 @@ key_err_loadFile = Couldn't open file
 # localization for JFileChooser
 acceptAllFileFilterText          =All Files (*.*)
 cancelButtonText                 =Cancel
-cancelButtonToolTipText          =Abort file chooser dialog
+cancelButtonToolTipText          =Cancel
 detailsViewButtonAccessibleName  =Details
 detailsViewButtonToolTipText     =Details
 directoryDescriptionText         =Directory
+directoryOpenButtonText          =Open
+directoryOpenButtonToolTipText   =Open selected file
 fileDescriptionText              =Generic File
 fileNameLabelText                =File name:
 filesOfTypeLabelText             =Files of type:
+fileNameHeaderText               =Name
+fileSizeHeaderText               =Size
+fileTypeHeaderText               =Type
+fileDateHeaderText               =Date
+fileAttrHeaderText               =Attribute
 helpButtonText                   =Help
 helpButtonToolTipText            =FileChooser help
 homeFolderAccessibleName         =Home
@@ -50,13 +57,16 @@ homeFolderToolTipText            =Home
 listViewButtonAccessibleName     =List
 listViewButtonToolTipText        =List
 lookInLabelText                  =Look in:
-newFolderAccessibleName           =New Folder
+newFolderAccessibleName          =New Folder
 newFolderErrorText               =Error creating new folder
 newFolderToolTipText             =Create New Folder
 openButtonText                   =Open
 openButtonToolTipText            =Open selected file
+openDialogTitleText              =
 saveButtonText                   =Save
 saveButtonToolTipText            =Save selected file
+saveDialogTitleText              =
+saveInLabelText                  =Save in
 updateButtonText                 =Update
 updateButtonToolTipText          =Update directory listing
 upFolderAccessibleName           =Up
