code cleanup // fixed some memory leaks - not finished! // reimplemented the search for available languages

--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -16,7 +16,7 @@ key_view = Ansicht
 key_language = Sprache
 key_english = Englisch
 key_german = Deutsch
-key_languageNotification = Alle Änderungen werden nach einem Neustart von Dicomux wirksam.
+key_languageNotification = Änderungen werden sofort übernommen.
 key_help = Hilfe
 key_about = Über
 key_welcome = Willkommen
