--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -16,7 +16,7 @@ key_view = View
 key_language = Language
 key_english = English
 key_german = German
-key_languageNotification = All changes will take effect after a restart of Dicomux.
+key_languageNotification = Changes will take effect immediately.
 key_help = Help
 key_about = About
 key_welcome = Welcome
