RawPlugin can save Dicom content now Language switching not really supported by that JFileChooser... it's a bug in the Java library

--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -63,6 +63,7 @@ newFolderToolTipText             =Create New Folder
 openButtonText                   =Open
 openButtonToolTipText            =Open selected file
 openDialogTitleText              =
+refreshActionLabelText           =Refresh
 saveButtonText                   =Save
 saveButtonToolTipText            =Save selected file
 saveDialogTitleText              =
