--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -65,6 +65,7 @@ newFolderToolTipText             =Neuen Ordner erstellen
 openButtonText                   =Öffnen
 openButtonToolTipText            =Ausgewählte Datei öffnen
 openDialogTitleText              =
+refreshActionLabelText           =Refresh
 saveButtonText                   =Speichern
 saveButtonToolTipText            =Ausgewählte Datei speichern
 saveDialogTitleText              =
@@ -73,4 +74,3 @@ updateButtonText                 =Aktualisieren
 updateButtonToolTipText          =Ordnerauflistung aktualisieren
 upFolderAccessibleName           =Hoch
 upFolderToolTipText              =Eine Ebene höher
-
