developer manual added // warnings removed // state diagram improved // license added to about

--- a/docs/userManual/dicomux.tex
+++ b/docs/userManual/dicomux.tex
@@ -13,10 +13,10 @@
 
 	\include{chapter/introduction}
 	\include{chapter/guide}
+	\include{chapter/manual}
 	\include{chapter/troubleshooting}
 	\include{chapter/faq}
 	%\appendix
-	%\include{chapter/test}
 
 \end{document}
 
