--- a/etc/language_en.properties
+++ b/etc/language_en.properties
@@ -30,7 +30,7 @@ key_html_restart = <html><font size=\"+2\">Restart Dicomux</font><br/><i>In orde
 key_html_openFile = <html><font size=\"+2\">Open file</font><br/><i>Please select the DICOM file, you want to open.</i><br/><br/></html>
 key_html_openDir = <html><font size=\"+2\">Open directory</font><br/><i>Please select the DICOM directory, you want to open.</i><br/><br/></html>
 key_html_errOpenFile = <html><font size=\"+2\">Error</font><br/><i>Sorry, but Dicomux was unable to open the file or directory.</i><br/><br/>You may want to do one of the following things.</html>
-key_html_about = <html><font size=\"+2\">About</font><br/><i>What? Who? Why? </i><br/><br/><p>Dicomux about information not yet implemented</p><p>License: GPLv3</p></html>
+key_html_about = <html><font size=\"+2\">About</font><br/><i>What? Who? Why? </i><br/><br/><p>Dicomux about information not yet implemented</p><p>This software is licensed under the terms of the GNU General Public License Version 3 as published by the Free Software Foundation.</p></html>
 key_err_loadFile = Couldn't open file
 
 # localization for JFileChooser
