--- a/etc/language_de.properties
+++ b/etc/language_de.properties
@@ -30,7 +30,7 @@ key_html_restart = <html><font size=\"+2\">Dicomux neustarten</font><br/><i>Um d
 key_html_openFile = <html><font size=\"+2\">Datei öffnen</font><br/><i>Bitte die zu öffnende DICOM Datei auswählen.</i><br/><br/></html>
 key_html_openDir = <html><font size=\"+2\">Verzeichnis öffnen</font><br/><i>Bitte das zu öffnende DICOM Verzeichnis auswählen.</i><br/><br/></html>
 key_html_errOpenFile = <html><font size=\"+2\">Fehler</font><br/><i>Entschuldigung, aber Dicomux konnte die Datei oder das Verzeichnis nicht öffnen.</i><br/><br/>Sie möchten bestimmt eines der folgenden Dinge tun.</html>
-key_html_about = <html><font size=\"+2\">Über</font><br/><i>Was? Wer? Warum? </i><br/><br/><p>Informationen über Dicomux wurden noch nicht eingefügt.</p><p>Lizenz: GPLv3</p></html>
+key_html_about = <html><font size=\"+2\">Über</font><br/><i>Was? Wer? Warum? </i><br/><br/><p>Informationen über Dicomux wurden noch nicht eingefügt.</p><p>Diese Software steht unter der GNU General Public License Version 3, welche von der Free Software Foundation veröffentlicht wurde.</p></html>
 
 key_err_loadFile = Konnte die Datei nicht finden: 
 
