--- a/README
+++ b/README
@@ -2,11 +2,15 @@ Dicomux is a viewer for DICOM files. Especially ECGs and encapsulated PDFs are s
 
 This software is a project of three students from Germany. Nobody is allowed to use this software for diagnostic purposes. Dicomux may only be used for testing purposes.
 
-own license
+license of the application
 - GPLv3
 
 logo derived from
 - http://commons.wikimedia.org/wiki/File:Linia_izoelektryczna_EKG.svg
+logo created by
+- Thomas Heidrich
+license of the logo
+- CC-BY-SA 3.0
 
 used external libraries
 - <Name>         <License>                  <URL>
