user manual added

--- a/docs/userManual/dicomux.tex
+++ b/docs/userManual/dicomux.tex
@@ -9,13 +9,13 @@
 
 	\tableofcontents
 	\listoffigures
-	\listoftables
+	%\listoftables
 
 	\include{chapter/introduction}
 	\include{chapter/guide}
 	\include{chapter/manual}
-	\include{chapter/troubleshooting}
-	\include{chapter/faq}
+	%\include{chapter/troubleshooting}
+	%\include{chapter/faq}
 	%\appendix
 
 \end{document}
