manual => user and developer manual // typos removed

--- a/docs/devManual/dicomux.tex
+++ b/docs/devManual/dicomux.tex
@@ -12,7 +12,7 @@
 %	\listoftables
 
 	\include{chapter/introduction}
-	\include{chapter/guide}
+	\include{chapter/manual}
 %	\include{chapter/troubleshooting}
 %	\include{chapter/faq}
 %	\appendix
